--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,13 @@
 	<name>restDemo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+		<dependency> 
+    		<groupId>org.springframework.boot</groupId> 
+   			 <artifactId>spring-boot-starter-validation</artifactId> 
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -30,6 +34,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <version>5.2.4.Final</version>
+		    <artifactId>hibernate-validator</artifactId>
 		</dependency>
 		<!--<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
@@ -52,8 +61,7 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.32</version>
 		</dependency>
-
-		<!--		<dependency>
+		<!--<dependency>
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-entitymanager</artifactId>
 		    <version>5.2.3.Final</version>
@@ -68,6 +76,11 @@
 		    <artifactId>lombok</artifactId>
 		    <version>1.18.24</version>
 		    <scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
