--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb_springboot
 spring.datasource.username=root
 spring.datasource.password=@Neosoftdata
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: true
 
-logging.level.org.springframework=debug
+#logging.level.org.springframework=debug
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
